--- a/css/AP.css
+++ b/css/AP.css
@@ -86,6 +86,46 @@ body{
   }
 
 
+  #men-tile, #women-tile, #kids-tile, #map-tile {
+  height: 250px;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 15px;
+  position: relative;
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+}
+#men-tile:hover, #women-tile:hover, #map-tile:hover, #kids-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#men-tile {
+  background: url('../images/menu-tile.jpg') no-repeat;
+  background-position: center;
+}
+#women-tile {
+  background: url('../images/specials-tile.jpg') no-repeat;
+  background-position: center;
+}
+#kids-tile {
+  background: url('../images/specials-tile.jpg') no-repeat;
+  background-position: center;
+}
+
+#men-tile span, #women-tile span, #map-tile span, #kids-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.6em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .8;
+}
+
+
 
 
 
